rollover text no longer overlaps

--- a/css/metricsgraphics.css
+++ b/css/metricsgraphics.css
@@ -1,6 +1,6 @@
 .mg-active-datapoint {
     fill: black;
-    font-size: 0.9rem;
+    font-size: 0.8rem; /*0.8rem;*/
     font-weight: 400;
     opacity: 0.8;
 }
@@ -255,7 +255,7 @@
 
 .mg-markers text {
     fill: black;
-    font-size: 0.7rem;
+    font-size: 0.6rem; /*0.76rem;*/
     opacity: .9;/*0.5;*/
     stroke: none;
 }
